--- a/WinTerminal.settings.json
+++ b/WinTerminal.settings.json
@@ -32,6 +32,12 @@
     "copyFormatting": "none",
     "copyOnSelect": true,
     "defaultProfile": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+    "newTabMenu": 
+    [
+        {
+            "type": "remainingProfiles"
+        }
+    ],
     "profiles": 
     {
         "defaults": 
@@ -44,8 +50,8 @@
             "cursorShape": "vintage",
             "font": 
             {
-                "face": "Hack NF",
-                "size": 11,
+                "face": "Hack Nerd Font",
+                "size": 11.0,
                 "weight": "normal"
             }
         },
@@ -66,12 +72,6 @@
                 "hidden": false,
                 "name": "Azure Cloud Shell",
                 "source": "Windows.Terminal.Azure"
-            },
-            {
-                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-                "hidden": false,
-                "name": "Ubuntu",
-                "source": "Windows.Terminal.Wsl"
             }
         ]
     },
@@ -284,5 +284,6 @@
             "white": "#C0C0C0",
             "yellow": "#808000"
         }
-    ]
+    ],
+    "themes": []
 }
